--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -39,7 +39,7 @@
   </target>
 
   <target name="parac">
-    <exec executable="parac"> <!-- specify location -->
+    <exec executable="./parac"> <!-- specify location -->
       <arg value="-p" />
       <arg value="${pipath.base};{src.dir}" />
       <arg value="${src.dir}/HelloWorld.para"/>
