--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -46,15 +46,18 @@
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
 
       <!--<arg value="${src.dir}/HelloWorld.para"/>
-      <arg value="${src.dir}/journalsystem/Doctor.para"/>
-      <arg value="${src.dir}/journalsystem/Secretary.para"/>
 
       <arg value="${src.dir}/journalsystem/JournalPolicy.para"/> 
       <arg value="${src.dir}/journalsystem/Matrix.para"/>
 
-      <arg value="${src.dir}/journalsystem/Session.para"/>-->
+      <arg value="${src.dir}/journalsystem/Session.para"/>
+      <arg value="${src.dir}/CPTest.para"/> -->
+
+      <arg value="${src.dir}/journalsystem/Employee.para"/>
+      <arg value="${src.dir}/journalsystem/Doctor.para"/>
+      <arg value="${src.dir}/journalsystem/Secretary.para"/>
       <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
-      <arg value="${src.dir}/CPTest.para"/>
+      <arg value="${src.dir}/Test.para"/> 
       <!-- Specify location like this <arg value="${src.dir}/se/chalmers/parajpmail/ParaJPMailException.para" /> -->
     </exec>
   </target>
@@ -73,8 +76,9 @@
   </target>
 
   <target name="run">
-    <java classname="CPTest" fork="true"> <!-- specify classname -->
-      <arg value="-h"/>
+    <java classname="Test" fork="true"> <!-- specify classname -->
+      <!--<arg value="-h"/>-->
+      <arg value="${arg}"/>
       <classpath> 
         <path refid="javac-classpath"/> <!-- not working -->
         <path location="${bin.dir}"/>
