--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -45,18 +45,13 @@
       <arg value="-p" />
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
 
-      <!--<arg value="${src.dir}/HelloWorld.para"/>
-
-      <arg value="${src.dir}/journalsystem/JournalPolicy.para"/> 
-      <arg value="${src.dir}/journalsystem/Matrix.para"/>
-
-      <arg value="${src.dir}/journalsystem/Session.para"/>
-      <arg value="${src.dir}/CPTest.para"/> -->
-
+      <!-- <arg value="${src.dir}/journalsystem/JournalPolicy.para"/>  -->
       <arg value="${src.dir}/journalsystem/Employee.para"/>
       <arg value="${src.dir}/journalsystem/Doctor.para"/>
       <arg value="${src.dir}/journalsystem/Secretary.para"/>
       <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
+      <!--<arg value="${src.dir}/journalsystem/HospitalService.para"/>-->
+      <!--<arg value="${src.dir}/Main.para"/> -->
       <arg value="${src.dir}/Test.para"/> 
       <!-- Specify location like this <arg value="${src.dir}/se/chalmers/parajpmail/ParaJPMailException.para" /> -->
     </exec>
@@ -76,9 +71,19 @@
   </target>
 
   <target name="run">
-    <java classname="Test" fork="true"> <!-- specify classname -->
+    <java classname="Main" fork="true"> <!-- specify classname -->
       <!--<arg value="-h"/>-->
       <arg value="${arg}"/>
+      <classpath> 
+        <path refid="javac-classpath"/> <!-- not working -->
+        <path location="${bin.dir}"/>
+      </classpath>
+      <sysproperty key="jpy.config" value="${jpy.dir}/jpyconfig.properties"/>
+    </java>
+  </target>
+
+  <target name="runTest">
+    <java classname="Test" fork="true"> <!-- specify classname -->
       <classpath> 
         <path refid="javac-classpath"/> <!-- not working -->
         <path location="${bin.dir}"/>
