working on policy

--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -45,12 +45,12 @@
       <arg value="-p" />
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
 
-      <!-- <arg value="${src.dir}/journalsystem/JournalPolicy.para"/>  -->
+      <arg value="${src.dir}/journalsystem/JournalPolicy.para"/>
       <arg value="${src.dir}/journalsystem/Employee.para"/>
       <arg value="${src.dir}/journalsystem/Doctor.para"/>
       <arg value="${src.dir}/journalsystem/Secretary.para"/>
       <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
-      <!--<arg value="${src.dir}/journalsystem/HospitalService.para"/>-->
+      <arg value="${src.dir}/journalsystem/HospitalService.para"/>
       <!--<arg value="${src.dir}/Main.para"/> -->
       <arg value="${src.dir}/Test.para"/> 
       <!-- Specify location like this <arg value="${src.dir}/se/chalmers/parajpmail/ParaJPMailException.para" /> -->
