--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -40,18 +40,29 @@
     </delete>
   </target>
 
-  <target name="parac">
+  <target name="parac" depends="fakePatientJournal">
     <exec executable="./parac"> <!-- specify location -->
       <arg value="-p" />
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
 
-      <arg value="${src.dir}/journalsystem/JournalPolicy.para"/>
-      <arg value="${src.dir}/journalsystem/Employee.para"/>
-      <arg value="${src.dir}/journalsystem/Doctor.para"/>
-      <arg value="${src.dir}/journalsystem/Secretary.para"/>
-      <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
-      <arg value="${src.dir}/journalsystem/HospitalService.para"/>
+
+      
+
       <!--<arg value="${src.dir}/Main.para"/> -->
+      
+      
+      <!--<arg value="${src.dir}/journalsystem/Employee.para"/> -->
+
+    <arg value="${src.dir}/journalsystem/Secretary.para"/>
+    
+      <arg value="${src.dir}/journalsystem/Doctor.para"/> 
+
+    <!-- <arg value="${src.dir}/journalsystem/Hospital.para"/> -->
+
+
+      <!--<arg value="${src.dir}/journalsystem/JournalPolicy.para" />-->
+      
+      <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
       <arg value="${src.dir}/Test.para"/> 
       <!-- Specify location like this <arg value="${src.dir}/se/chalmers/parajpmail/ParaJPMailException.para" /> -->
     </exec>
@@ -90,5 +101,10 @@
       </classpath>
       <sysproperty key="jpy.config" value="${jpy.dir}/jpyconfig.properties"/>
     </java>
+  </target>
+
+  <target name="fakePatientJournal">
+    <touch file="${src.dir}/journalsystem/PatientJournal.pi" />
+    <echo file="${src.dir}/journalsystem/PatientJournal.pi" message="public class PatientJournal { }" />
   </target>
 </project>
