--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -33,6 +33,7 @@
         <include name="**/*.orig" />
         <include name="**/*.rej" />
         <exclude name="**/MatrixApi.java"/>
+        <exclude name="**/MatrixApi.pi"/>
         <exclude name="**/runtime/*.pi" />
         <exclude name="**/runtime/*.java" />
       </fileset>
@@ -51,19 +52,18 @@
       <!--<arg value="${src.dir}/Main.para"/> -->
       
       
-      <!--<arg value="${src.dir}/journalsystem/Employee.para"/> -->
 
     <arg value="${src.dir}/journalsystem/Secretary.para"/>
     
-      <arg value="${src.dir}/journalsystem/Doctor.para"/> 
+    <arg value="${src.dir}/journalsystem/Doctor.para"/> 
 
-    <!-- <arg value="${src.dir}/journalsystem/Hospital.para"/> -->
+   <arg value="${src.dir}/journalsystem/Hospital.para"/> 
 
 
       <!--<arg value="${src.dir}/journalsystem/JournalPolicy.para" />-->
       
-      <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
-      <arg value="${src.dir}/Test.para"/> 
+     <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
+     <arg value="${src.dir}/journalsystem/Test.para"/>
       <!-- Specify location like this <arg value="${src.dir}/se/chalmers/parajpmail/ParaJPMailException.para" /> -->
     </exec>
   </target>
