Patientjournal with simple high low policy

--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -57,7 +57,7 @@
     
     <arg value="${src.dir}/journalsystem/Doctor.para"/> 
 
-   <arg value="${src.dir}/journalsystem/Hospital.para"/> 
+   <!--<arg value="${src.dir}/journalsystem/Hospital.para"/> -->
 
 
       <!--<arg value="${src.dir}/journalsystem/JournalPolicy.para" />-->
