combining policies working

--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -49,7 +49,7 @@
       <!--<arg value="${src.dir}/journalsystem/Secretary.para"/>-->
       <!--<arg value="${src.dir}/journalsystem/Doctor.para"/> -->
       <!--<arg value="${src.dir}/journalsystem/Hospital.para"/> -->
-      <!--<arg value="${src.dir}/journalsystem/JournalPolicy.para" />-->
+      <arg value="${src.dir}/journalsystem/Policy.para"/>
       <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
       <arg value="${src.dir}/journalsystem/Test.para"/>
     </exec>
