--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -46,12 +46,17 @@
       <arg value="-p" />
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
       <!--<arg value="${src.dir}/Main.para"/> -->
+     <!-- <arg value="${src.dir}/journalsystem/PatientJournal.para"/> -->
+     <arg value="${src.dir}/journalsystem/Locks.para"/>
+    <arg value="${src.dir}/journalsystem/Secretary.para"/>
+      <arg value="${src.dir}/journalsystem/Doctor.para"/>
+      <arg value="${src.dir}/journalsystem/MatrixService.para"/>
+
       <arg value="${src.dir}/journalsystem/Policy.para"/>
-      <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
-      <arg value="${src.dir}/journalsystem/Secretary.para"/>
-      <!--<arg value="${src.dir}/journalsystem/Doctor.para"/> -->
       <!--<arg value="${src.dir}/journalsystem/Hospital.para"/> -->
-      <!--<arg value="${src.dir}/journalsystem/Test.para"/>-->
+
+      <!--<arg value="${src.dir}/journalsystem/Patient.para"/>-->
+      <arg value="${src.dir}/journalsystem/Test.para"/>
     </exec>
   </target>
 
