--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -41,18 +41,19 @@
     </delete>
   </target>
 
-  <target name="parac" >
+  <target name="parac" depends="fakePatientJournal">
     <exec executable="./parac"> <!-- specify location -->
       <arg value="-p" />
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
       <!--<arg value="${src.dir}/Main.para"/> -->
-     <!-- <arg value="${src.dir}/journalsystem/PatientJournal.para"/> -->
-     <arg value="${src.dir}/journalsystem/Locks.para"/>
-    <arg value="${src.dir}/journalsystem/Secretary.para"/>
+    <arg value="${src.dir}/journalsystem/Secretary.para"/>      
       <arg value="${src.dir}/journalsystem/Doctor.para"/>
+     <arg value="${src.dir}/journalsystem/Locks.para"/>
+      <arg value="${src.dir}/journalsystem/Policy.para"/>
+     <arg value="${src.dir}/journalsystem/PatientJournal.para"/>
+
       <arg value="${src.dir}/journalsystem/MatrixService.para"/>
 
-      <arg value="${src.dir}/journalsystem/Policy.para"/>
       <!--<arg value="${src.dir}/journalsystem/Hospital.para"/> -->
 
       <!--<arg value="${src.dir}/journalsystem/Patient.para"/>-->
