--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -46,16 +46,20 @@
       <arg value="-p" />
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
       <!--<arg value="${src.dir}/Main.para"/> -->
+
+      <arg value="${src.dir}/journalsystem/Policy.para"/>
+      
+<!--             <arg value="${src.dir}/journalsystem/Hospital.para"/> 
       <arg value="${src.dir}/journalsystem/Employee.para"/>
-      <!-- <arg value="${src.dir}/journalsystem/Policy.para"/> -->
-    <!-- <arg value="${src.dir}/journalsystem/Secretary.para"/>       -->
-      <!-- <arg value="${src.dir}/journalsystem/Doctor.para"/> -->
+
+      <arg value="${src.dir}/journalsystem/Doctor.para"/>
+    <arg value="${src.dir}/journalsystem/Secretary.para"/> -->
      <!-- <arg value="${src.dir}/journalsystem/Locks.para"/> -->
      <!-- <arg value="${src.dir}/journalsystem/PatientJournalD.para"/> -->
 
       <!-- <arg value="${src.dir}/journalsystem/MatrixService.para"/> -->
 
-      <arg value="${src.dir}/journalsystem/Hospital.para"/> 
+
 
       <!--<arg value="${src.dir}/journalsystem/Patient.para"/>-->
       <arg value="${src.dir}/journalsystem/Test.para"/>
@@ -100,5 +104,11 @@
   <target name="fakePatientJournal">
     <touch file="${src.dir}/journalsystem/PatientJournal.pi" />
     <echo file="${src.dir}/journalsystem/PatientJournal.pi" message="public class PatientJournal { }" />
+    <touch file="${src.dir}/journalsystem/Doctor.pi" />
+    <echo file="${src.dir}/journalsystem/Doctor.pi" message="public class Doctor { }" />
+    <touch file="${src.dir}/journalsystem/Secretary.pi" />
+    <echo file="${src.dir}/journalsystem/Secretary.pi" message="public class Secretary { }" />
+    <touch file="${src.dir}/journalsystem/Hospital.pi" />
+    <echo file="${src.dir}/journalsystem/Hospital.pi" message="public class Hospital { }" />
   </target>
 </project>
