--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -41,31 +41,27 @@
     </delete>
   </target>
 
-  <target name="parac" depends="fakePatientJournal">
+  <target name="parac" depends="dummyClasses">
     <exec executable="./parac"> <!-- specify location -->
       <arg value="-p" />
       <arg value="${pipath.base}:${src.dir}/journalsystem" />
-      <!--<arg value="${src.dir}/Main.para"/> -->
 
       <arg value="${src.dir}/journalsystem/Policy.para"/>
 
       <arg value="${src.dir}/journalsystem/PatientJournalD.para"/> 
 
+      <arg value="${src.dir}/journalsystem/Employee.para"/>
       <arg value="${src.dir}/journalsystem/Util.para"/> 
 
-      <arg value="${src.dir}/journalsystem/Employee.para"/>
       <arg value="${src.dir}/journalsystem/Hospital.para"/>
 
       <arg value="${src.dir}/journalsystem/Secretary.para"/> 
-      <!-- <arg value="${src.dir}/journalsystem/Doctor.para"/> -->
+      <arg value="${src.dir}/journalsystem/Doctor.para"/>
      
 
       <!-- <arg value="${src.dir}/journalsystem/MatrixService.para"/> -->
 
-
-
-      <!--<arg value="${src.dir}/journalsystem/Patient.para"/>-->
-      <arg value="${src.dir}/journalsystem/Test.para"/>
+      <!-- <arg value="${src.dir}/journalsystem/Test.para"/> -->
     </exec>
   </target>
 
@@ -104,7 +100,7 @@
     </java>
   </target>
 
-  <target name="fakePatientJournal">
+  <target name="dummyClasses">
     <touch file="${src.dir}/journalsystem/PatientJournalD.pi" />
     <echo file="${src.dir}/journalsystem/PatientJournalD.pi" message="public class PatientJournalD { }" />
     <touch file="${src.dir}/journalsystem/Doctor.pi" />
