--- a/Paragon/build.xml
+++ b/Paragon/build.xml
@@ -44,23 +44,26 @@
   <target name="parac" depends="dummyClasses">
     <exec executable="./parac"> <!-- specify location -->
       <arg value="-p" />
-      <arg value="${pipath.base}:${src.dir}/journalsystem" />
+<!--       <arg value="${pipath.base}:${src.dir}/journalsystem" />
 
+      <arg value="${src.dir}/journalsystem/Employee.para"/>
       <arg value="${src.dir}/journalsystem/Policy.para"/>
 
       <arg value="${src.dir}/journalsystem/PatientJournalD.para"/> 
 
-      <arg value="${src.dir}/journalsystem/Employee.para"/>
+
       <arg value="${src.dir}/journalsystem/Util.para"/> 
 
       <arg value="${src.dir}/journalsystem/Hospital.para"/>
 
       <arg value="${src.dir}/journalsystem/Secretary.para"/> 
-      <arg value="${src.dir}/journalsystem/Doctor.para"/>
+      <arg value="${src.dir}/journalsystem/Doctor.para"/> -->
      
+      <arg value="${src.dir}/journalsystem/Car.para"/>
 
-      <!-- <arg value="${src.dir}/journalsystem/MatrixService.para"/> -->
+      <arg value="${src.dir}/journalsystem/Audi.para"/>
 
+      <arg value="${src.dir}/journalsystem/Main.para"/>
       <!-- <arg value="${src.dir}/journalsystem/Test.para"/> -->
     </exec>
   </target>
